fixed cookie bar on mobile homepage

--- a/app/layout/less/base/header-mobile.less
+++ b/app/layout/less/base/header-mobile.less
@@ -61,3 +61,14 @@
 .navbar-toggle {
     margin-right: 4px;
 }
+
+@media (max-width: 991px) {
+  #cookie-warning-containers {
+    margin-top: 50px;
+    position: relative;
+    z-index: 9000;
+  }
+  .home-inner {
+    position: relative;
+  }
+}
