--- a/app/layout/less/cms/homepage.less
+++ b/app/layout/less/cms/homepage.less
@@ -56,7 +56,7 @@
     /*  place buttons on mobile */
     @media (min-width: 320px) and (max-width: 767px) {
         .special-buttons {
-            top: 177px;
+            top: 120px;
         }
     }
 
